fix: Input contrast, save scroll, disable buttons

--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -22,7 +22,7 @@
 .add {
     position: absolute;
 
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .down,
@@ -53,12 +53,17 @@
     color: #18d44a;
 }
 
+:is(.down, .up, .remove, .add):disabled {
+    cursor: not-allowed;
+    color: grey;
+}
+
 .countriesInput {
-    background-color: #61ce344a;
+    background-color: #61ce342e;
 
     border: none;
 
-    color: #f50808;
+    color: #fb008a;
 
     font-size: 16px;
 
